--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,7 +457,7 @@
 }
 
 .pt-37 {
-    padding-top: 37px;
+    padding-top: 24px;
 }
 
 .hero_mobile {
@@ -978,6 +978,10 @@
         left: -100px;
     }
 
+    .py-sm-32 {
+        padding: 32px 0px;
+    }
+
     .peopeImg {
         left: -61px;
     }
@@ -1095,6 +1099,10 @@
 }
 
 @media (min-width:992px) {
+    .pt-37 {
+        padding-top: 37px;
+    }
+
     .menu {
         display: none;
     }
